deploy/retrieveUnpackaged/objects/PRM_Page__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Links_Title__c</fullName>
        <label>Links Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Category__c</fullName>
        <label>Page Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Subcategory__c</fullName>
        <label>Page Subcategory</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <picklist>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PRM Page</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Page_Category__c</columns>
        <columns>Page_Subcategory__c</columns>
        <columns>Version__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PRM Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PRM Pages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>